# aig-agil-redirect-mechanic-shop

./: Dockerfile  README.md  pyproject.toml
frontend/: Dockerfile  README.md  app.py  talleres.xlsx
frontend/frontend/: app.py
